# ClassifiersForLoopUnroll

./: .gitignore  .gitmodules  README.md  a.out  commands.sh  comp.out  debug_out.txt  feature_extraction.sh  features.json  insert_pragmas.py  insert_timing_code.py  make_dataset.py  output_exe  plan.txt  preprop.cpp  preprop.py  preprop_better.py  preprop_simple.py  results.json  results_first.json  simple_test.c  test  test.c  test.cpp  test.ll  test_modified.ll  test_no_nested  test_no_nested.cpp  test_no_nested.ll  test_no_nested.profdata  test_no_nested.profraw  test_nonest.ll  test_noprag.cpp  test_prags.ll  test_preprop.c  test_program  test_timing.cpp  time.cpp  timed_src.cpp  times.json
SNU-real-time/: adpcm-test.c  bs.c  crc.c  fft1.c  fft1k.c  fibcall.c  fir.c  insertsort.c  jfdctint.c  lms.c  ludcmp.c  matmul.c  minver.c  qsort-exam.c  select.c  sqrt.c
clang_bindings/: clang_bindings.py  clang_pass.cpp
clang_pass/: clang_pass.cpp
compilers_training/: save_dataset.ipynb  train_knn_mit.ipynb  train_rf_mit.ipynb  train_svm_mit.ipynb
dataset/: alaw.c  aligned_malloc.c  array_reverse.c  bs.c  bubble_sort_2.c  c4.c  c5.c  coin_change.c  coin_change_infinite.c  cosine_sim.c  count_vowels.c  dijkstra.c  dna_profile_generation.c  dna_random.c  dna_rna.c  edit_distance.c  ex_cpp.cpp  fibcall.c  fir.c  gauss_elimination.c  hash_crc32.c  (+61 more)
llvm_passes/: CMakeLists.txt
llvm_passes/featurepass/: CMakeLists.txt  featurepass.cpp
llvm_passes/loop_unroll_pass/: CMakeLists.txt  loop_unroll_pass.cpp
llvm_passes/set_unroll_pass/: CMakeLists.txt  set_unroll_pass.cpp
(+88 files in other folders)
